turtleart.circletwo.CircleTwo.scala.error
Compilation error:
CircleTwo:2: error: ';' expected but ',' found.
  droite(90);leveCrayon();avance(55);baisseCrayon();cercle(55.0);leveCrayon();avance(55);baisseCrayon();cercle(110.0),recule(110)
                                                                                                                     ^